--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,13 @@ body {
     color: #3a3a3a;
     font-family: 'Lato', sans-serif;
 }
+h1, h2, h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
 
 /* Header */
 header {
@@ -36,12 +43,6 @@ header a {
     color: inherit;
 }
 
-h1 {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
-}
 
 #menu {
     font-size: 110%;
@@ -96,6 +97,21 @@ main {
     background: url("../images/hero-image.webp") no-repeat center center/cover;
 }
 
+#cover-text {
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
+}
 /* Footer */
 #social-networks {
     text-align: center;
