--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,13 +17,13 @@ body {
     color: #3a3a3a;
     font-family: 'Lato', sans-serif;
 }
+
 h1, h2, h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #252525;
 }
-
 
 /* Header */
 header {
@@ -42,7 +42,6 @@ header a {
     text-decoration: none;
     color: inherit;
 }
-
 
 #menu {
     font-size: 110%;
@@ -95,6 +94,7 @@ main {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
+    position: relative;
 }
 
 #cover-text {
@@ -112,6 +112,7 @@ main {
 #cover-text > h2, #cover-text > h3 {
     color: #ffffff;
 }
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -160,6 +161,12 @@ main {
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
+    }
+
+    /* Hero image */
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 }
 
