--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,8 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1, 
-h2, 
+h1,
+h2,
 h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
@@ -51,7 +51,7 @@ header a {
     list-style-type: none;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
 
@@ -96,7 +96,7 @@ main {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
-    position:relative;
+    position: relative;
 }
 
 #cover-text {
@@ -111,55 +111,36 @@ main {
     padding-left: 10px;
 }
 
-#cover-text > h2, #cover-text > h3 {
+#cover-text>h2,
+#cover-text>h3 {
     color: #ffffff;
 }
+
 /* Reasons section */
-
 #reasons {
-
     width: 90%;
-
     margin: 20px auto;
-
 }
 
 #reasons h2 {
-
     margin-bottom: 20px;
-
     text-align: center;
-
     font-size: 280%;
-
 }
 
-#benefits-physical > div,
-
-#benefits-mental > div {
-
+#benefits-physical>div,
+#benefits-mental>div {
     line-height: 20px;
-
     margin-bottom: 20px;
-
 }
-
-
 
 #benefits p {
-
     padding: 0 20px;
-
 }
 
-
-
 #benefits hr {
-
     border-top: 1px solid #3a3a3a;
-
     margin: 5px 0;
-
 }
 
 #circle-cover-bg {
@@ -172,11 +153,39 @@ main {
     max-width: 300px;
     max-height: 300px;
 }
+
 #benefits-image {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+/* Meetup Times section */
+#times {
+    background: url('../images/dublin-city.webp') no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 15px;
+    text-align: center;
+    /* This will not wrap on screens of less than 400px wide.
+    Each div will expand to fill the available space on its row */
+    flex-basis: 200px;
+    flex-grow: 1;
+    /* Creates a grid of meetup time divs over the background image */
+    border: 2px solid white;
+}
+
+#times h3 {
+    /* Override the heading colour set in general styles */
+    color: #fafafa;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -194,6 +203,7 @@ main {
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
     /* Header */
     nav {
         display: block;
@@ -207,7 +217,7 @@ main {
         display: flex;
     }
 
-    #menu > li {
+    #menu>li {
         padding-left: 1rem;
     }
 
@@ -221,8 +231,8 @@ main {
         margin: 0 0.5rem;
     }
 
-     /* Main content */
-     main {
+    /* Main content */
+    main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
@@ -250,14 +260,15 @@ main {
         text-align: end;
         align-self: flex-end;
     }
-
 }
+
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
-    #menu a:hover{
+    #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
 }
+
 @media screen and (min-width: 1200px) {    
     /* Reasons section */
     #benefits {
